# cmake-practice

./: CMakeLists.txt  flake.nix  main.cpp
Adder/: CMakeLists.txt
lib/: CMakeLists.txt
lib/Adder/: CMakeLists.txt  adder.cpp
lib/Optional/: CMakeLists.txt
main/: CMakeLists.txt
main/src/: main.cpp
src/: CMakeLists.txt  main.cpp
